# my-voice-discord

./: .gitignore  bot.py  config_example.py  example_config.py  launcher.json  launcher.py  package-lock.json  pyproject.toml  readme.md  requirements.txt
cogs/: __init__.py  channel_join.py  channel_left.py  database.py  dispatcher.py  event_handler.py  general.py  help.py  voice.py
helpers/: cache.py  constants.py  context.py  mongo.py  webhook.py
migrations/models/: 0_20210425112901_init.sql  0_20210513083911_init.sql  1_20210425131014_update.sql  2_20210425183324_update.sql  3_20210429174606_update.sql  4_20210430091545_None.sql
models/: __init__.py  fields.py  functions.py  guild.py  member.py  types.py  voice.py
utils/: checks.py  errors.py  functions.py  prompt.py
